--- a/packages/client/src/pages/Home/index.module.less
+++ b/packages/client/src/pages/Home/index.module.less
@@ -33,7 +33,14 @@
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: -1;
     background: radial-gradient(circle at 50% 50%, rgba(41, 98, 255, 0.1) 0%, transparent 50%);
+  }
+
+  .linkWrapper {
+    width: 100%;
+    max-width: 600px;
+    margin-bottom: 16px;
   }
 }
 
